# cpp-game

./: .gitignore  Ataskaita.xlsx  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/: map.txt  map1.txt
include/: Block.hpp  CollisionManager.hpp  Config.hpp  Door.hpp  Game.hpp  Gem.hpp  Hazard.hpp  InputHandler.hpp  Platform.hpp  Player.hpp  SoundManager.hpp  TextureManager.hpp  UI.hpp
include/core/: Config.hpp  Game.hpp  GameState.hpp
include/entities/: Button.hpp  Door.hpp  Gem.hpp  Platform.hpp  Player.hpp  SpriteAnimator.hpp
include/managers/: BackgroundManager.hpp  CollisionManager.hpp  GameObject.hpp  SaveManager.hpp
include/ui/: UI.hpp
src/: Block.cpp  CollisionManager.cpp  Door.cpp  Game.cpp  GameObject.cpp  Gem.cpp  Hazard.cpp  InputHandler.cpp  Platform.cpp  Player.cpp  UI.cpp  main.cpp
src/core/: Game.cpp
src/entities/: Button.cpp  Door.cpp  Hazard.cpp  Platform.cpp  Player.cpp  SpriteAnimator.cpp
src/managers/: BackgroundManager.cpp  CollisionManager.cpp  InputHandler.cpp  SaveManager.cpp  SoundManager.cpp  TextureManager.cpp
src/ui/: UI.cpp
